# auto-research-readme

./: .gitignore  .pre-commit-config.yaml  Makefile  config.yaml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
auto_readme/: __init__.py  cli.py  generator.py
auto_readme/integration/: __init__.py  base.py
auto_readme/integration/release/: changelog.py  release.py
auto_readme/integrations/: __init__.py
auto_readme/integrations/github/: integration.py
auto_readme/integrations/pypi/: integration.py  pypi_workflow.yml.j2
auto_readme/integrations/zenodo/: integration.py
outputs/: LICENSE.md  README.md  citation.bib  dataset_card.json  metadata.json
src/: main.py  publish.yml
src/generators/: base.py  citation_generator.py  hf_generator.py  license_generator.py  readme_generator.py  zenodo_generator.py
src/templates/: readme.md.j2
templates/: License.md.j2  readme.md.j2
tests/: __init__.py
tests/fixtures/: configs.py
tests/unit/: test_generator.py  test_github_integration.py  test_integration_discovery.py  test_pypi_integration.py  test_zenodo_integration.py
tests/unit/test_integrations/: test_integration_discovery.py
tests/unit/test_integrations/github/: test_github_integration.py
tests/unit/test_integrations/pypi/: test_pypi_integration.py
tests/unit/test_integrations/zenodo/: test_zenodo_integration.py
tests/unit/test_release/: test_full_release.py  test_release.py
